--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,10 @@
         android:allowBackup="true"
         android:extractNativeLibs="true"
         android:fullBackupContent="true"
-        android:icon="@mipmap/launcher_icon"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
-        android:roundIcon="@mipmap/launcher_icon"
+
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialFiles"
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
